# 2023-12-04

./: .gitignore  CMakeLists.txt  README.rst
livehacking/: CMakeLists.txt  auto.cpp  class-layout.cpp  class.py  containers.cpp  implementation-inheritance-NO.cpp  intro.cpp  lambda.cpp  map.cpp  oo.cpp  storage.cpp  thread.cpp  variant.cpp  vector-bad-initialization.cpp  vector-sort.cpp
programs/: CMakeLists.txt  fibonacci.py  generator.py  kochen.cpp  reg.cpp  shared-weak.cpp  unique-ptr.cpp  w1-loop.cpp
tests/: CMakeLists.txt  cloud-kochtopf-suite.cpp  hysteresis-falls_below_range.cpp  hysteresis-nop_when_within_range.cpp  hysteresis-rises_above_range.cpp  hysteresis-rises_above_range_when_on.cpp  hysteresis-set-range.cpp  kochtopf-suite.cpp  sensor-w1-suite.cpp  switch-mock-basic.cpp
toolcase/: CMakeLists.txt  cloud-device.h  cloud-kochtopf.cpp  cloud-kochtopf.h  hysteresis.cpp  hysteresis.h  kochtopf.cpp  kochtopf.h  sensor-mock.cpp  sensor-mock.h  sensor-w1.cpp  sensor-w1.h  switch-mock.cpp  switch-mock.h  switch.h
