ADD_EXECUTABLE(containers containers.cpp)
ADD_EXECUTABLE(map map.cpp)
ADD_EXECUTABLE(vector-sort vector-sort.cpp)
ADD_EXECUTABLE(vector-bad-initialization vector-bad-initialization.cpp)
ADD_EXECUTABLE(lambda lambda.cpp)
ADD_EXECUTABLE(thread thread.cpp)
ADD_EXECUTABLE(auto auto.cpp)
ADD_EXECUTABLE(class-layout class-layout.cpp)
#ADD_EXECUTABLE(variant variant.cpp)
ADD_EXECUTABLE(intro intro.cpp)

ADD_EXECUTABLE(storage storage.cpp)
